# Shader-Parser

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
ShaderParser/: CMakeLists.txt
ShaderParser/include/: Core.h  Group.h  Helper.h  ParserConstants.h  ShaderParser.h  Token.h
ShaderParser/src/: Core.h  ShaderParser.cpp  ShaderParser.h  ShaderProc.h  Token.h
Tests/: CMakeLists.txt
Tests/src/: test_comments.cpp  test_groups.cpp  test_tokens.cpp
